# ragcheck

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  smoke-eval.yaml
benchmarks/: README.md  benchmark_dataset.jsonl  generate_qa.py  run_benchmark.py  synthetic_dataset.jsonl
benchmarks/corpus/: fetch_corpus.py
benchmarks/pipelines/: agentic_rag.py  common.py  hybrid_rag.py  naive_rag.py  reranked_rag.py
docs/: ci-integration.md  judge-validation.md  metrics.md  quickstart.md
examples/: judge_labels_sample.jsonl  quickstart.ipynb  toy_config.yaml  toy_config_groq.yaml  toy_dataset.jsonl  toy_pipeline.py
ragcheck/: __init__.py  cache.py  cli.py  config.py  demo.py  llm.py  runner.py
ragcheck/adapters/: __init__.py  base.py  function.py  langchain.py
ragcheck/datasets/: __init__.py  loaders.py  models.py  synthetic.py
ragcheck/judge/: __init__.py  judge.py  validation.py
ragcheck/judge/prompts/: answer_relevance.md  answers_equivalent.md  chunk_relevance.md  citation_support.md  dataset_paraphrase.md  dataset_qa_cross.md  dataset_qa_multi.md  dataset_qa_single.md  dataset_unanswerable.md  faithfulness_decompose.md  faithfulness_verify.md  refusal_detection.md
ragcheck/metrics/: __init__.py  base.py
ragcheck/metrics/generation/: __init__.py  citation_accuracy.py  faithfulness.py  relevance.py
ragcheck/metrics/retrieval/: __init__.py  context_precision.py  context_recall.py  hit_rate.py  mrr.py
ragcheck/metrics/robustness/: __init__.py  paraphrase_consistency.py  refusal_calibration.py
ragcheck/report/: __init__.py  cli_summary.py  html.py  models.py  regression.py
tests/: conftest.py  test_adapters.py  test_cache.py  test_datasets.py  test_demo.py  test_html_report.py  test_judge.py  test_langchain_adapter.py  test_llm.py  test_metrics_generation.py  test_metrics_retrieval.py  test_metrics_robustness.py  test_regression.py  test_report.py  test_runner.py  test_synthetic.py  test_validation.py
