[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragcheck-eval"   # PyPI: `ragcheck` was taken; import + CLI remain `ragcheck`
version = "0.1.1"
description = "pytest for RAG systems - evaluate retrieval-augmented generation pipelines"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ekta Shah" }]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
]
benchmarks = [
    "sentence-transformers>=3.0",
    "rank_bm25>=0.2",
    "matplotlib>=3.8",
]

[project.scripts]
ragcheck = "ragcheck.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["ragcheck"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"ragcheck/cli.py" = ["B008"]   # typer.Argument in defaults is the typer idiom
"ragcheck/demo.py" = ["E501"]  # demo corpus/answer strings read better unwrapped
"examples/*" = ["E501"]        # corpus/prompt strings read better unwrapped
"benchmarks/*" = ["E501"]      # prompt strings read better unwrapped

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
